<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bcd4"
    tools:context="com.example.android.righteyeglasses.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00bcd4"
        >

        <ImageView
            android:id="@+id/glass_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/glass"
            android:layout_marginBottom="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/picture_of_glass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_choose_right_eyeglasses"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#717171"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="120dp"
            />


    </FrameLayout>

    <Button
        android:id="@+id/first_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:text="@string/click_here"
        android:background="#8bc34a"
        android:textSize="45sp"
        android:textColor="#fff"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:onClick="firstPage"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:background="#55000000"
        android:layout_below="@+id/first_button"
        />


</RelativeLayout>
